ajout des dots de la maquette et suppression des anciens qui étaient juste des images

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		</a>
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
-			<img class="dot"src="./assets/images/slideshow/slide1.jpg" alt="bullet point">
-			<img class="dot"src="./assets/images/slideshow/slide2.jpg" alt="bullet point">
-			<img class="dot"src="./assets/images/slideshow/slide3.jpg" alt="bullet point">
-			<img class="dot"src="./assets/images/slideshow/slide4.png" alt="bullet point">
+			<article class="dot"></article>
+		    <article class="dot"></article>
+			<article class="dot"></article>
+			<article class="dot"></article>
 		</div>
 	</div>
 	<section id="about-us" class="container">
